我的小店导航页~ product页

--- a/shop/css/index.css
+++ b/shop/css/index.css
@@ -1,3 +1,4 @@
+/*header的开始*/
 #header{
     background: url(../img/banner.jpg) no-repeat center;
     height: 600px;
@@ -82,16 +83,65 @@ div.float#cart{
      text-decoration: underline;
      float: left;
  }
+#main-header p{
+    color: #ffffff;
+
+}
+/*header的结束**/
 
 
 
+/*new-product开始*/
+#new-product{
+    margin-top: 56px;
+    height: 266px;
+}
+#new-product .sale{
+    height: 210px;
+    width: 360px;
+    background:  no-repeat;
+    float: left;
+    margin-right: 30px;
+}
+#new-product .bg1{
+    background: url("../img/bg1.jpg")
+}
+#new-product .bg2{
+    background: url("../img/bg2.jpg")
+}
+#new-product .sale .bg3{
+    background: url("../img/bg3.jpg")
+    margin-right : 0px;
+}
+#new-product .sale h4{
+    color: #ffffff;
+}
+/*new-product结束*/
+
+/*product开始*/
+.product-info{
+    width: 340px;
+    border: 1px solid #cccccc;
+    float: left;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
+.product-img{
+    background: url("../img/bs1.jpg");
+}
+
+.product-detail input{
+    width: 150px;
+    height: 50px;
+
+}
 
 
 
-
-
-
-
-
-
-
+.add{
+    width: 150px;
+    height: 50px;
+    background: orange;
+    
+}
