--- a/shop/css/index.css
+++ b/shop/css/index.css
@@ -85,11 +85,13 @@ div.float#cart{
  }
 #main-header p{
     color: #ffffff;
-
+    height: 50px;
+    position: relative;
+    left: 190px;
+    top: 35px;
+    cursor: pointer;
 }
 /*header的结束**/
-
-
 
 /*new-product开始*/
 #new-product{
