--- a/shop/css/index.css
+++ b/shop/css/index.css
@@ -117,6 +117,10 @@ div.float#cart{
 }
 #new-product .sale h4{
     color: #ffffff;
+    margin-top: 150px;
+    margin-left: 200px;
+    font-size: 30px;
+
 }
 /*new-product结束*/
 
